--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 :root {
-  --color0: rgb(250, 250, 250);
-  --color1: #394a51;
-  --color2: #7fa99b;
-  --color2-trans: rgba(127, 169, 155, 0.7);
-  --color3: #fbf2d5;
-  --color4: #fdc57b;
-  --color4-trans: rgba(253, 197, 123, 0.8);
-  --main-font: "Share Tech", sans-serif;
+  --color-base: rgb(250, 250, 250);
+  --color-text: black;
+  --color-dark: #1d556f;
+  --color-accent: #fa360a;
+  --color-water: #288fb4;
+  --color-road: #efddb2;
+  --title-font: "Nabla", system-ui;
+  --main-font: monospace;
 }
 
 /* ELEMENTS */
 
 body {
   font-family: var(--main-font);
-  color: var(--color1);
-  background-color: var(--color3);
+  color: var(--color-text);
+  background-color: var(--color-dark);
   margin: 16px;
 }
 
@@ -30,11 +30,11 @@ i {
 }
 
 button {
-  color: var(--color1);
+  color: var(--color-text);
   font-family: var(--main-font);
   font-size: 18px;
   padding: 8px 16px;
-  border: dashed 1px var(--color1);
+  border: dashed 1px var(--color-text);
   border-radius: 10px;
   cursor: pointer;
 }
@@ -45,34 +45,37 @@ button:hover {
 }
 
 footer {
+  color: var(--color-base);
   margin-top: 10px;
   margin-left: 30px;
 }
 
 a {
-  color: var(--color1);
+  color: var(--color-base);
   text-decoration: none;
 }
 
 a:hover {
-  font-weight: bold;
+  text-decoration: underline;
 }
 
 /* CLASSES */
 
 .title {
-  font-size: 40px;
-  font-weight: bolder;
+  margin-top: -20px;
+  font-size: 50px;
+  font-family: var(--title-font);
+  text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.3);
 }
 
 .score-panel {
   font-size: 18px;
-  margin-top: 20px;
+  margin-top: 25px;
 }
 
 .game-container {
   width: 322px;
-  background-color: var(--color0);
+  background-color: var(--color-base);
   padding: 30px;
   border: dashed 1px;
   border-radius: 10px;
@@ -80,7 +83,7 @@ a:hover {
 }
 
 .game-board {
-  border: solid 1px var(--color1);
+  border: solid 1px var(--color-text);
 }
 
 .grid {
@@ -89,7 +92,7 @@ a:hover {
 }
 
 .cell {
-  border: solid 1px var(--color1);
+  border: solid 1px var(--color-text);
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -125,7 +128,7 @@ a:hover {
 }
 
 .clicked {
-  background-color: var(--color4);
+  background-color: var(--color-accent);
   cursor: not-allowed;
 }
 
@@ -134,7 +137,7 @@ a:hover {
 }
 
 .boom {
-  background-color: var(--color0);
+  background-color: var(--color-base);
   background-image: url(./images/bomb.png);
   background-size: contain;
 }
