--- a/style.css
+++ b/style.css
@@ -171,3 +171,8 @@ a:hover {
   background-image: url("./images/duck-dead.png");
   background-size: cover;
 }
+
+.info-text {
+  font-size: 12px;
+  margin-bottom: 20px;
+}
